Updated Pedometer, working on fixes now

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity
             android:name="uwstout.healmebaby.PedometerActivity">
         </activity>
+        <activity
+            android:name="uwstout.healmebaby.PlannerActivity">
+        </activity>
     </application>
 
 </manifest>
