Implemented a pop up when the register button is clicked. This is first the UI component. The registration information will be handled next

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity
             android:name="uwstout.healmebaby.PlannerActivity">
         </activity>
+        <activity android:name=".PopRegister"
+            android:theme="@style/AppTheme.CustomTheme"
+            ></activity>
     </application>
 
 </manifest>
