Revert "Signed-off-by: Student <Student>"
This reverts commit 6d94d43119e2dcacacd891f6a7e391e577204865.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,13 +32,8 @@
             android:name="uwstout.healmebaby.DisplayMessageActivity">
         </activity>
         <activity
-            android:name="uwstout.healmebaby.PedometerActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="uwstout.healmebaby.PedometerSettingsActivity"
-            android:screenOrientation="portrait" />
-
-        <service android:name="uwstout.healmebaby.PedometerService" />
+            android:name="uwstout.healmebaby.PedometerActivity">
+        </activity>
         <activity
             android:name="uwstout.healmebaby.PlannerActivity">
         </activity>
