--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
 
     <application
         android:allowBackup="true"
@@ -17,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="uwstout.healmebaby.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,30 +24,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".PlannerActivity" />
+        <activity android:name=".UserProfile" />
+        <activity android:name=".ViewCalendar" />
+        <activity android:name=".EnterWorkoutResults" />
         <activity
-            android:name="uwstout.healmebaby.MainActivity">
-        </activity>
-        <activity
-            android:name="uwstout.healmebaby.DisplayMessageActivity">
-        </activity>
-        <activity
-            android:name="uwstout.healmebaby.PedometerActivity">
-        </activity>
-        <activity
-            android:name="uwstout.healmebaby.PlannerActivity">
-        </activity>
-        <activity
-            android:name="uwstout.healmebaby.UserProfile">
-        </activity>
-        <activity
-            android:name="uwstout.healmebaby.ViewCalendar">
-        </activity>
-        <activity
-            android:name="uwstout.healmebaby.EnterWorkoutResults">
-        </activity>
-        <activity android:name=".PopRegister"
-            android:theme="@style/AppTheme.CustomTheme"
-            ></activity>
+            android:name=".PopRegister"
+            android:theme="@style/AppTheme.CustomTheme" />
+        <activity android:name=".WorkoutRecords" />
+        <activity android:name=".PedometerActivity" />
+
+        <service
+            android:name=".PedometerService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".PedometerSettingsActivity"></activity>
     </application>
 
 </manifest>
