Addition of global JWT

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,5 +42,8 @@
 
         <activity android:name=".PedometerSettingsActivity"></activity>
     </application>
+    <application>
+        android:name=".JWTToken">
+    </application>
 
 </manifest>
