--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".JWTToken"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -40,9 +41,8 @@
             android:enabled="true"
             android:exported="true" />
 
-        <application>
-            android:name=".JWTToken">
-        </application>
+
+
 
 
         <activity android:name=".PedometerSettingsActivity"></activity>
